--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy
 on:  
   workflow_dispatch:
   schedule:
-  - cron: '30 9 * * *'  #every day at 3:00 pm IST
+  - cron: '0 19 * * *'  #every day at 12:30 am IST
 
 jobs:
   deploy:
